--- a/style.css
+++ b/style.css
@@ -156,6 +156,11 @@
 .business-policy {
     border-radius: 15px;
     background-color: rgba(39, 39, 39, 0.05);
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+        rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+        rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+        rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+        rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
     width: 80vw;
     height: 320px;
 
@@ -227,11 +232,10 @@
     font-size: 40px;
 
     font-weight: 800;
-
 }
 
 .insta-sec-text p {
-    color: rgba(39, 39, 39, 0.60);
+    color: rgba(39, 39, 39, 0.6);
     text-align: center;
     width: 600px;
     margin: 30px auto;
@@ -249,6 +253,90 @@
 
 .insta-img-grp img {
     width: 16vw;
+    border-radius: 8px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+        rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 /* Insta End */
+/* Latest deal start */
+.latest-deal-sec {
+    background-image: url("./flower-shop-assignment/Flower Asset/Rectangle 9.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 450px;
+    width: 80%;
+    margin: 200px auto 60px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+
+}
+
+.latest-deal-sec h2 {
+    color: #272727;
+
+
+    font-size: 40px;
+
+    font-weight: 800;
+
+}
+
+.latest-deal-sec p {
+    color: rgba(39, 39, 39, 0.60);
+
+
+    font-size: 18px;
+
+    font-weight: 400;
+
+}
+
+.latest-deal-sec input {
+    width: 450px;
+    border-radius: 15px;
+    border: none;
+    background-color: #fff;
+    padding: 25px;
+    margin-right: 5px;
+}
+
+/* Latest deal End */
+/* Footer start */
+footer {
+    height: 450px;
+    width: 100%;
+    background-color: #272727;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+footer p {
+    color: rgba(255, 255, 255, 0.90);
+    width: 625px;
+    text-align: center;
+
+    font-size: 18px;
+
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.copy-right {
+    color: rgba(255, 255, 255, 0.40);
+    text-align: center;
+
+    font-size: 16px;
+
+    font-weight: 400;
+
+}
+
+/* Footer End */
